fixed bug where the users submitted cards were not showing after editing adding and deleting.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -71,3 +71,9 @@ body {
    font-size: 13px;
   transform: rotateY(180deg);
 }
+#form-container{
+  padding-left: 350px;
+  padding-right: 350px;
+  margin-left: 350px;
+  margin-right: 350px;
+}
